# ros_ps3_joy

./: README.md
joy_ps3_gazebo/: CMakeLists.txt  package.xml
joy_ps3_gazebo/launch/: joy_control.launch  wheel_gazebo.launch
joy_ps3_gazebo/meshes/: imu.urdf.xacro
joy_ps3_gazebo/meshes/camera/: camera.urdf.xacro
joy_ps3_gazebo/meshes/sensor/: hokuyo.urdf.xacro
joy_ps3_gazebo/urdf/: wheel_robot.xacro
joy_teleop_controller/: CMakeLists.txt  package.xml
joy_teleop_controller/config/: diff_drive_controller.yaml  ps3.config.yaml
joy_teleop_controller/launch/: wheel_control.launch
ps3_joy_basic/: CMakeLists.txt  package.xml  run.sh
ps3_joy_basic/launch/: turtle.launch
ps3_joy_basic/src/: basic_twist_publisher.cpp  jmsg_talker.cpp  joy_twist_publisher.cpp
ps3_joy_msgs/: CMakeLists.txt  package.xml
ps3_joy_msgs/cfg/: Sample1.cfg
ps3_rviz_move/: CMakeLists.txt  package.xml  run.sh
ps3_rviz_move/launch/: movement_robot.launch
ps3_rviz_move/src/: robot_sim.cpp
ps3_rviz_move/urdf/: movement_robot.urdf
